# keep-the-change

./: .env  .gitmodules
contracts/: foundry.toml
contracts/script/: Donatooor.s.sol  Donatooor.sol
contracts/src/: Donatooor.sol
extension/: global.d.ts  package.json  popup.tsx
extension/background/messages/: donate-prompt.ts
extension/contents/: injection.ts  message-relayer.ts
extension/tabs/: donate-prompt.tsx
server/: Cargo.toml
server/src/: main.rs
server/src/bindings/: donatooor.rs  mod.rs
snap/: README.md
